# proc-gen

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: extract_column_min_depths.py  surface_depth_map.py  terrain_helpers.py
src/: constants.rs  fractional_routing_prototype.py  gpu_simulation.rs  main.rs  main_gpu_test.rs  main_original.rs  simulation.wgsl
src/shaders/: apply_deltas.wgsl  common.wgsl  copy_hex_data.wgsl  erosion.wgsl  generated_constants.wgsl  init_water_step.wgsl  min_neigh.wgsl  ocean_boundary.wgsl  rainfall.wgsl  repose_deltas.wgsl  river_source.wgsl  scatter_water.wgsl  water_routing.wgsl
