[package]
name = "proc-gen"
version = "0.1.0"
edition = "2021"
default-run = "proc-gen"

[dependencies]
image = "0.24"
rand = "0.8"
rayon = "1"
minifb = "0.24"
wgpu = { version = "0.17", features = ["wgsl"] }
bytemuck = { version = "1.13", features = ["derive"] }
pollster = "0.3"
futures-intrusive = "0.4"
noise = "0.9"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"